@@ -113,6 +113,9 @@ When used offensively, this attack always has at least a 60% chance to hit."
 weapon_special_plague_description= _ "Plague:
 When a unit is killed by a Plague attack, that unit is replaced with a unit identical to and on the same side as the unit with the Plague attack. (This doesn't work on Undead or units in villages.)"
 
+weapon_special_plague_arg_description= _ "Plague:
+When a unit is killed by a Plague attack, that unit is replaced with a unit of the specified type on the same side as the unit with the Plague attack. (This doesn't work on Undead or units in villages.)"
+
 weapon_special_poison_description= _ "Poison:
 This attack poisons the target. Poisoned units lose 8 HP every turn until they are cured or are reduced to 1 HP."
 
